--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,6 +6,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Install dev tools and dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    sudo \
+    clang \
     curl \
     gdb \
     cmake \
@@ -51,6 +53,8 @@ ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
+RUN echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$USERNAME \
+    && chmod 0440 /etc/sudoers.d/$USERNAME
 
 # Switch to non-root user
 USER $USERNAME
