--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,8 @@
     "thread": "cpp",
     "cinttypes": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "filesystem": "cpp",
+    "codecvt": "cpp"
   },
 }
