--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,9 @@
     "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON", // Generate compile_commands.json for better IntelliSense
     "-DCMAKE_BUILD_TYPE=Debug" // Default to Debug build type
   ],
+  "cmake.ctestArgs": [
+    "--verbose"
+  ],
   // Task settings
   "task.problemMatchers.neverPrompt": {
     "shell": true // Avoid prompting for scanning task output
@@ -116,6 +119,18 @@
     "filesystem": "cpp",
     "codecvt": "cpp",
     "sim_vector": "cpp",
-    "*.inc": "cpp"
+    "*.inc": "cpp",
+    "bitset": "cpp",
+    "__bit_reference": "cpp",
+    "__locale": "cpp",
+    "__node_handle": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "__verbose_abort": "cpp",
+    "ios": "cpp",
+    "locale": "cpp",
+    "print": "cpp",
+    "queue": "cpp",
+    "stack": "cpp"
   },
 }
