Pass to replace jax constants with actual constants

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,6 +140,7 @@
     "forward_list": "cpp",
     "regex": "cpp",
     "expected": "cpp",
-    "list": "cpp"
+    "list": "cpp",
+    "sim_stl_pair": "cpp"
   },
 }
