Rename Python project jax_audio_plugins -> jxap

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
   "python.testing.unittestArgs": [
     "-v",
     "-s",
-    "./python/jax_audio_plugins",
+    "./python/jxap",
     "-p",
     "*_test.py"
   ],
