--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,5 +3,5 @@ requires = ["setuptools>=61.0"]  # Specifies setuptools as the build system
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "jax_audio_plugins"
+name = "jxap"
 version = "0.1.0"
