Clean up VSC settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,38 +2,28 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Current File (Add Project Root)", // Descriptive name
+      // --- Python Debugging Configuration ---
+      // This configuration launches the currently active Python file in the editor.
+      "name": "Python: Debug Current File",
       "type": "debugpy",
       "request": "launch",
-      "program": "${file}", // Runs the file currently open in the editor
+      "program": "${file}", // The "${file}" variable always refers to the file open in the editor.
       "console": "integratedTerminal",
-      "env": {
-        "PYTHONPATH": "${workspaceFolder}/python"
-      },
-      "cwd": "${workspaceFolder}/python",
-      "justMyCode": true // Optional: Set to false to debug into installed libraries
+      "justMyCode": true // Set to 'false' if you need to debug into installed libraries.
     },
     {
-      "name": "Debug C++ Test",
+      // --- C++ Debugging Configuration ---
+      // This configuration is for debugging your C++ tests using GDB.
+      "name": "C++: Debug CTest Target",
       "type": "cppdbg",
       "request": "launch",
-      // Resolved by CMake Tools:
+      // This command dynamically gets the executable path for the current CMake launch target.
       "program": "${command:cmake.launchTargetPath}",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/build", // Run from build directory
-      "environment": [
-        {
-          // add the directory where our binaries are located to the PATH
-          // ensure that linking works correctly.
-          "name": "PATH",
-          "value": "${env:PATH}:${command:cmake.getLaunchTargetDirectory}"
-        },
-        {
-          "name": "OTHER_VALUE",
-          "value": "Something something"
-        }
-      ],
+      // Sets the working directory to the build folder, which is standard for CTest.
+      "cwd": "${workspaceFolder}/build",
+      "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
       "setupCommands": [
@@ -48,10 +38,8 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "CMake Build", // Ensure project is built before debugging
-      // If you are debugging a test executable directly (without ctest),
-      // point 'program' to it, e.g., "${workspaceFolder}/build/tests/cpp/cpp_tests"
-      // and potentially add GTest flags to 'args', e.g., ["--gtest_filter=*MySpecificTest*"]
-    },
+      // This ensures that the project is built with the latest changes before a debug session starts.
+      "preLaunchTask": "CMake Build"
+    }
   ]
 }
