--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true,
+    "**/Thumbs.db": true
   },
   "files.watcherExclude": {
     "**/.git/objects/**": true,
@@ -21,14 +21,10 @@
     "build/": true, // Exclude build directory from search
     "install/": true // Exclude install directory (lots of headers)
   },
-  // C/C++ specific settings (can be overridden by devcontainer.json)
-  "C_Cpp.default.cppStandard": "c++17",
-  "C_Cpp.default.cStandard": "c11",
-  "C_Cpp.default.intelliSenseMode": "linux-clang-x64",
+  // C/C++ specific settings
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
   "C_Cpp.formatting": "clangFormat",
-  // Python specific settings (can be overridden by devcontainer.json)
-  "python.envFile": "${workspaceFolder}/.env",
+  // Python tests 
   "python.testing.unittestEnabled": true,
   "python.testing.pytestEnabled": false,
   "python.testing.unittestArgs": [
@@ -37,14 +33,6 @@
     "./python/jxap",
     "-p",
     "*_test.py"
-  ],
-  "python.analysis.extraPaths": [
-    "${workspaceFolder}/python"
-  ],
-  "python.analysis.exclude": [
-    ".git",
-    "build/**",
-    "install/**"
   ],
   // CMake Tools specific settings
   "cmake.configureOnOpen": true,
@@ -159,6 +147,8 @@
     "unordered_set": "cpp",
     "alignedvector3": "cpp",
     "propagate_const": "cpp",
-    "future": "cpp"
+    "future": "cpp",
+    "shared_mutex": "cpp"
   },
+  "python-envs.pythonProjects": []
 }
